# darwinx

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/api-proto/: Cargo.toml  build.rs
crates/api-proto/proto/: backtest.proto  common.proto  live.proto  optimizer.proto  strategy.proto
crates/api-proto/src/: .gitignore  lib.rs
crates/backtest-engine/: Cargo.toml
crates/backtest-engine/src/: config.rs  data_provider.rs  error.rs  event_driven.rs  lib.rs  metrics.rs  polars_engine.rs  types.rs
crates/backtest-engine/src/metrics/: returns.rs  risk.rs  statistics.rs
crates/backtest-engine/src/polars_engine/: massive.rs  vectorized.rs
crates/backtest-engine/tests/: integration_tests.rs
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  traits.rs  types.rs
crates/core/src/traits/: exchange.rs  market_data.rs  risk_manager.rs  strategy.rs
crates/core/src/types/: candle.rs  order.rs  position.rs  signal.rs  timeframe.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  loader.rs  multi_timeframe.rs
crates/data/src/loader/: csv.rs  integration_tests.rs  parquet.rs
crates/data/src/multi_timeframe/: alignment.rs  cache.rs  context.rs  synchronizer.rs
crates/files/: Cargo.toml  README.md  ast.rs  builder.rs  constraints.rs  examples.rs  generator.rs  genetic.rs  lib.rs  nodes.rs  random.rs  semantic.rs  strategy.rs  validator.rs
crates/indicators/: Cargo.toml
crates/indicators/examples/: registry_demo.rs
crates/indicators/src/: lib.rs  macros.rs  metadata.rs  momentum.rs  registry.rs  trend.rs  volatility.rs  volume.rs
crates/indicators/src/momentum/: macd.rs  roc.rs  rsi.rs  stochastic.rs
crates/indicators/src/trend/: ema.rs  sma.rs  vwma.rs  wma.rs
crates/indicators/src/volatility/: atr.rs  bollinger.rs  keltner.rs
crates/indicators/src/volume/: mfi.rs  obv.rs  vwap.rs
crates/strategy-converter/: Cargo.toml  README.md
crates/strategy-converter/src/: converter.rs  error.rs  formats.rs  inputs.rs  lib.rs  outputs.rs
crates/strategy-converter/src/inputs/: rhai_parser.rs
crates/strategy-converter/src/outputs/: freqtrade_generator.rs  python_generator.rs  rhai_generator.rs  rust_generator.rs
crates/strategy-generator/: Cargo.toml
crates/strategy-generator/src/: ast.rs  constraints.rs  generator.rs  lib.rs
crates/strategy-generator/src/ast/: builder.rs  nodes.rs  validator.rs
crates/strategy-generator/src/generator/: genetic.rs  random.rs
crates/strategy-store/: Cargo.toml
crates/strategy-store/migrations/: 20240101000000_initial_schema.sql  20241201000000_add_best_strategies.sql
crates/strategy-store/src/: database.rs  helpers.rs  lib.rs  models.rs  repositories.rs
crates/strategy-store/src/models/: backtest_result.rs  strategy.rs  trade.rs
crates/strategy-store/src/repositories/: backtest_repo.rs  strategy_repo.rs
doc/: 20252310-roadmap.md  ADR-001-MULTI-TIMEFRAME.md  README.md  arquitectura.md  backtest_engine_specification.md  backtest_engine_update.md  decisiones_tecnicas_v2.md  especificaciones_arquitectura.md  especificaciones_arquitectura_v2.md  indicators.md  mtf_impact_analysis .md  multitimeframe_analisis.md  old-roadmap.md  patrones_de_diseño.md  prompts.md  resumen_ejecutivo_final.md  risk_management_emergente.md  risk_management_emergente_v2.2.md  roadmap_v2.1_emergent_risk.md  roadmap_v2_multi_timeframe.md  struct.md
doc/architecture/: overview.md  patterns.md  technical.md
doc/architecture/decisions/: ADR-002-emergent-risk.md
doc/development/: backtest-polars-status.md  coding-standards.md  compliance-report.md  polars-vectorized-implementation.md  prompts.md
doc/guides/: available-indicators.md  data-module.md  generator-versions-comparison.md  how-to-run-generator.md  multi-timeframe.md  strategy-generator.md
doc/roadmap/: current.md  history.md
doc/specifications/: backtest-engine.md  massive-backtest-pipeline.md
examples/: run_generator.rs
results/: massive_backtest_btcusdt_1h.json  massive_backtest_btcusdt_1h_2024-12-01_2025-03-01_100000_100_100000_0.001_5_0.02_10_0.5_0.0_0.01_0.5_0.3,0.2,0.2,0.15,0.15_10.json  massive_backtest_btcusdt_1h_2024-12-01_2025-03-01_10000_100_10000_0.001_5_0.02_10_0.5_0.0_0.0_0.5_0.3,0.2,0.2,0.15,0.15_10.json  massive_backtest_old.json
scripts/: build-binaries.sh  darwinx_files.txt  darwinx_standalone.py  extract_darwinx_code.sh  github_files.txt
tmp/: darwinx_code_snapshot.txt
