# ============================================================================
# DARWINX - Trading Bot Ecosystem
# Workspace Root Configuration
# ============================================================================

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/indicators",
    "crates/data",
    "crates/strategy-store",
    "crates/strategy-generator",
    "crates/backtest-engine",
    # "crates/strategy-converter",
    # "crates/optimizer",
    # "crates/runner-live",
    # "crates/data-manager",
    "crates/api-proto",
    # "crates/api-server",
    # "crates/api-client",
    # "crates/cli-client",
    # "crates/gui-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["DarwinX Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darwinx/darwinx"
homepage = "https://darwinx.dev"

[workspace.dependencies]
# ============================================================================
# ASYNC RUNTIME
# ============================================================================
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

once_cell = "1.19"
parking_lot = "0.12"
ctor = "0.6.1"
# ============================================================================
# SERIALIZATION
# ============================================================================
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# ============================================================================
# gRPC (TONIC)
# ============================================================================
tonic = { version = "0.14.2", features = ["transport"] }
tonic-build = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

# ============================================================================
# DATA PROCESSING
# ============================================================================
polars = { version = "0.51.0", features = [
    "lazy",
    "parquet",
    "csv",
    "json",
    "dtype-datetime",
    "performant",
] }
ndarray = "0.17.1"

tempfile = "3.6"
# ============================================================================
# DATABASE
# ============================================================================
sqlx = { version = "0.8", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "chrono",
    "json",
    "migrate",
] }

# ============================================================================
# HTTP/WEBSOCKET
# ============================================================================
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5"

# ============================================================================
# CRYPTO/AUTH
# ============================================================================
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "10.1.0"
uuid = { version = "1", features = ["v4", "serde"] }

# ============================================================================
# SCRIPTING (RHAI)
# ============================================================================
rhai = { version = "1.19", features = ["sync", "serde"] }

# ============================================================================
# LOGGING & TRACING
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================================================
# ERROR HANDLING
# ============================================================================
anyhow = "1.0"
thiserror = "2.0.17"

# ============================================================================
# CLI
# ============================================================================
clap = { version = "4.5.51", features = ["derive", "cargo"] }
indicatif = "0.18.2"
comfy-table = "7"
colored = "3.0.0"

# ============================================================================
# GUI (GTK4/RELM4)
# ============================================================================
gtk4 = { version = "0.10.2", features = ["v4_12"] }
relm4 = "0.10.0"
relm4-components = "0.10.0"
libadwaita = { version = "0.8.0", features = ["v1_5"] }
plotters = "0.3"

# ============================================================================
# PARALLELIZATION
# ============================================================================
rayon = "1.10"
crossbeam = "0.8"

# ============================================================================
# TIME
# ============================================================================
chrono = { version = "0.4", features = ["serde"] }

# ============================================================================
# RANDOM & MATH
# ============================================================================
rand = "0.9.2"
rand_distr = "0.5.1"
statrs = "0.18.0"

# ============================================================================
# INTERNAL CRATES
# ============================================================================
darwinx-core = { path = "crates/core" }
darwinx-indicators = { path = "crates/indicators" }
darwinx-data = { path = "crates/data" }
darwinx-store = { path = "crates/strategy-store" }
darwinx-generator = { path = "crates/strategy-generator" }
darwinx-backtest = { path = "crates/backtest-engine" }
# darwinx-converter = { path = "crates/strategy-converter" }
# darwinx-runner = { path = "crates/runner-live" }
# darwinx-optimizer = { path = "crates/optimizer" }
# darwinx-data-manager = { path = "crates/data-manager" }
darwinx-proto = { path = "crates/api-proto" }

# ============================================================================
# PROFILES
# ============================================================================

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "abort"

[profile.bench]
debug = true
