[package]
name = "darwinx-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
darwinx-core = { workspace = true }

# Data processing
polars = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true }

tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
