[package]
name = "darwinx-strategy-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.82"

[dependencies]
darwinx-core = { path = "../core" }
darwinx-indicators = { path = "../indicators" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
