[package]
name = "darwinx-indicators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# No dependencies needed for basic indicators
serde = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
ctor = { workspace = true }

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "indicators_bench"
# harness = false