[package]
name = "darwinx-strategy-converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
darwinx-core = { workspace = true }
darwinx-generator = { workspace = true }
darwinx-backtest-engine = { path = "../backtest-engine" }

# Scripting
rhai = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# String processing
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

