[package]
name = "darwinx-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
darwinx-core = { workspace = true }
darwinx-generator = { workspace = true }
# Note: darwinx-backtest-engine is not in workspace.dependencies, use path directly
darwinx-backtest-engine = { path = "../backtest-engine" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = "0.10"
hex = "0.4"
